[package]
name = "rust-version-strings-and-memory-management"
version = "1.0.0"
authors = ["Your Name <youremail@example.com>"]
edition = "2018"

[dependencies]
tempfile = "3.1.0"
assert_cmd = "0.10"
predicates = "1"

[[bin]]
name = "disemvowel"
path = "disemvowel/main.rs"

[[bin]]
name = "palindrome"
path = "palindrome/main.rs"

[[bin]]
name = "memory_leak"
path = "memory_leak/main.rs"
